tree-sitter-dform/test/corpus/repo/crates__dform-mock__schemas__aws-mock.txt
=====================================
crates/dform-mock/schemas/aws-mock.df
=====================================

# Mock AWS provider in the shape of the Terraform AWS provider (v5 schema),
# twelve resource types, written by hand from the provider's schema. It exists
# to make two shapes concrete for the phase 2 decisions:
#
#   - Optional+Computed (optional_computed): the program may set the attribute;
#     when it does not, AWS picks it at Apply (an instance's subnet_id and
#     availability_zone, a security group's vpc_id, a bucket's name).
#   - keyless sets (type set, no type_list_key): security group ingress and
#     egress, route table routes, vpc_security_group_ids. Element order is
#     not a change; an element has no identity but its whole content.
#   - force_new: changing a vpc's or subnet's cidr_block, a subnet's zone or a
#     bucket's name replaces the object, as the provider's RequiresReplace does.
#   - type_replace: an instance's replacement is created first; a bucket's
#     name is global, so the old bucket is destroyed first.
#   - name_like: a name_prefix names the object in the account, as `name`
#     and `bucket` do; a keyed stack's deployments must not share one.
#
# Every type has tags (optional) and tags_all (computed: tags merged with the
# provider's default_tags). ids and arns are computed; ids are fresh. An
# attribute that holds another object's id keeps the Terraform name and is
# typed `ref(T)`: the program gives it the resource (`vpc_id = main`), and
# the provider its id (R-43).

edition 2026

# aws_vpc
type_provider("aws_vpc", "aws")
type_attr("aws_vpc", "id", "string", ["computed", "id"])
type_mint("aws_vpc", "id", "vpc-{hash}")
type_attr("aws_vpc", "arn", "string", ["computed"])
type_mint("aws_vpc", "arn", "arn:aws:ec2:us-east-1:123456789012:vpc/{name}")
type_attr("aws_vpc", "tags", "map", [])
type_attr("aws_vpc", "tags_all", "map", ["computed"])
type_attr("aws_vpc", "cidr_block", "string", ["optional_computed", "force_new"])
type_mint("aws_vpc", "cidr_block", "10.0.0.0/16")
type_attr("aws_vpc", "instance_tenancy", "string", [])
type_attr("aws_vpc", "enable_dns_support", "bool", [])
type_attr("aws_vpc", "enable_dns_hostnames", "bool", ["optional_computed"])
type_mint("aws_vpc", "enable_dns_hostnames", false)
type_attr("aws_vpc", "ipv6_cidr_block", "string", ["optional_computed"])
type_mint("aws_vpc", "ipv6_cidr_block", "")
type_attr("aws_vpc", "default_security_group_id", "string", ["computed"])
type_mint("aws_vpc", "default_security_group_id", "sg-{hash}")
type_attr("aws_vpc", "default_route_table_id", "string", ["computed"])
type_mint("aws_vpc", "default_route_table_id", "rtb-{hash}")
type_attr("aws_vpc", "main_route_table_id", "string", ["computed"])
type_mint("aws_vpc", "main_route_table_id", "rtb-{hash}")
type_attr("aws_vpc", "default_network_acl_id", "string", ["computed"])
type_mint("aws_vpc", "default_network_acl_id", "acl-{hash}")
type_attr("aws_vpc", "dhcp_options_id", "string", ["computed"])
type_mint("aws_vpc", "dhcp_options_id", "dopt-{hash}")
type_attr("aws_vpc", "owner_id", "string", ["computed"])
type_mint("aws_vpc", "owner_id", "123456789012")

# aws_subnet
type_provider("aws_subnet", "aws")
type_attr("aws_subnet", "id", "string", ["computed", "id"])
type_mint("aws_subnet", "id", "subnet-{hash}")
type_attr("aws_subnet", "arn", "string", ["computed"])
type_mint("aws_subnet", "arn", "arn:aws:ec2:us-east-1:123456789012:subnet/{name}")
type_attr("aws_subnet", "tags", "map", [])
type_attr("aws_subnet", "tags_all", "map", ["computed"])
type_attr("aws_subnet", "vpc_id", "ref(aws_vpc)", ["required"])
type_attr("aws_subnet", "cidr_block", "string", ["force_new"])
type_attr("aws_subnet", "availability_zone", "string", ["optional_computed", "force_new"])
type_mint("aws_subnet", "availability_zone", "us-east-1a")
type_attr("aws_subnet", "availability_zone_id", "string", ["optional_computed"])
type_mint("aws_subnet", "availability_zone_id", "use1-az1")
type_attr("aws_subnet", "map_public_ip_on_launch", "bool", [])
type_attr("aws_subnet", "owner_id", "string", ["computed"])
type_mint("aws_subnet", "owner_id", "123456789012")

# aws_security_group
type_provider("aws_security_group", "aws")
type_attr("aws_security_group", "id", "string", ["computed", "id"])
type_mint("aws_security_group", "id", "sg-{hash}")
type_attr("aws_security_group", "arn", "string", ["computed"])
type_mint("aws_security_group", "arn", "arn:aws:ec2:us-east-1:123456789012:security_group/{name}")
type_attr("aws_security_group", "tags", "map", [])
type_attr("aws_security_group", "tags_all", "map", ["computed"])
type_attr("aws_security_group", "name", "string", ["optional_computed"])
type_mint("aws_security_group", "name", "terraform-{hash}")
type_attr("aws_security_group", "name_prefix", "string", ["optional_computed", "name_like"])
type_attr("aws_security_group", "description", "string", [])
type_attr("aws_security_group", "vpc_id", "ref(aws_vpc)", ["optional_computed"])
type_mint("aws_security_group", "vpc_id", "vpc-default")
type_attr("aws_security_group", "ingress", "set", ["optional_computed"])
type_attr("aws_security_group", "egress", "set", ["optional_computed"])
type_attr("aws_security_group", "ingress.from_port", "int", ["required"])
type_attr("aws_security_group", "ingress.to_port", "int", ["required"])
type_attr("aws_security_group", "ingress.protocol", "string", ["required"])
type_attr("aws_security_group", "ingress.cidr_blocks", "list", [])
type_attr("aws_security_group", "ingress.security_groups", "set", [])
type_attr("aws_security_group", "ingress.self", "bool", [])
type_attr("aws_security_group", "ingress.description", "string", [])
type_attr("aws_security_group", "egress.from_port", "int", ["required"])
type_attr("aws_security_group", "egress.to_port", "int", ["required"])
type_attr("aws_security_group", "egress.protocol", "string", ["required"])
type_attr("aws_security_group", "egress.cidr_blocks", "list", [])
type_attr("aws_security_group", "egress.security_groups", "set", [])
type_attr("aws_security_group", "egress.self", "bool", [])
type_attr("aws_security_group", "egress.description", "string", [])
type_attr("aws_security_group", "revoke_rules_on_delete", "bool", [])
type_attr("aws_security_group", "owner_id", "string", ["computed"])
type_mint("aws_security_group", "owner_id", "123456789012")

# aws_instance
type_provider("aws_instance", "aws")
type_replace("aws_instance", "create_first")
type_attr("aws_instance", "id", "string", ["computed", "id"])
type_mint("aws_instance", "id", "i-{hash}")
type_attr("aws_instance", "arn", "string", ["computed"])
type_mint("aws_instance", "arn", "arn:aws:ec2:us-east-1:123456789012:instance/{name}")
type_attr("aws_instance", "tags", "map", [])
type_attr("aws_instance", "tags_all", "map", ["computed"])
type_attr("aws_instance", "ami", "string", ["optional_computed"])
type_mint("aws_instance", "ami", "ami-0abcdef1234567890")
type_attr("aws_instance", "instance_type", "string", ["optional_computed"])
type_mint("aws_instance", "instance_type", "t3.micro")
type_attr("aws_instance", "subnet_id", "ref(aws_subnet)", ["optional_computed"])
type_mint("aws_instance", "subnet_id", "subnet-default{n}")
type_attr("aws_instance", "availability_zone", "string", ["optional_computed"])
type_mint("aws_instance", "availability_zone", "us-east-1a")
type_attr("aws_instance", "vpc_security_group_ids", "set(ref(aws_security_group))", ["optional_computed"])
type_attr("aws_instance", "associate_public_ip_address", "bool", ["optional_computed"])
type_mint("aws_instance", "associate_public_ip_address", false)
type_attr("aws_instance", "private_ip", "string", ["optional_computed"])
type_mint("aws_instance", "private_ip", "10.0.1.{n}")
type_attr("aws_instance", "key_name", "string", ["optional_computed"])
type_mint("aws_instance", "key_name", "")
type_attr("aws_instance", "iam_instance_profile", "string", ["optional_computed"])
type_mint("aws_instance", "iam_instance_profile", "")
type_attr("aws_instance", "user_data", "string", [])
type_attr("aws_instance", "root_block_device", "list", ["optional_computed"])
type_attr("aws_instance", "public_ip", "string", ["computed"])
type_mint("aws_instance", "public_ip", "203.0.113.{n}")
type_attr("aws_instance", "public_dns", "string", ["computed"])
type_mint("aws_instance", "public_dns", "ec2-{name}.compute-1.amazonaws.com")
type_attr("aws_instance", "private_dns", "string", ["computed"])
type_mint("aws_instance", "private_dns", "ip-10-0-1-{n}.ec2.internal")
type_attr("aws_instance", "primary_network_interface_id", "string", ["computed"])
type_mint("aws_instance", "primary_network_interface_id", "eni-{hash}")
type_attr("aws_instance", "instance_state", "string", ["computed"])
type_mint("aws_instance", "instance_state", "running")

# aws_iam_role
type_provider("aws_iam_role", "aws")
type_attr("aws_iam_role", "id", "string", ["computed", "id"])
type_mint("aws_iam_role", "id", "{doc:name}")
type_attr("aws_iam_role", "arn", "string", ["computed"])
type_mint("aws_iam_role", "arn", "arn:aws:iam:us-east-1:123456789012:iam_role/{name}")
type_attr("aws_iam_role", "tags", "map", [])
type_attr("aws_iam_role", "tags_all", "map", ["computed"])
type_attr("aws_iam_role", "name", "string", ["optional_computed"])
type_mint("aws_iam_role", "name", "terraform-{hash}")
type_attr("aws_iam_role", "name_prefix", "string", ["optional_computed", "name_like"])
type_attr("aws_iam_role", "assume_role_policy", "string", ["required"])
type_attr("aws_iam_role", "path", "string", [])
type_attr("aws_iam_role", "description", "string", [])
type_attr("aws_iam_role", "max_session_duration", "int", [])
type_attr("aws_iam_role", "managed_policy_arns", "set", ["optional_computed"])
type_attr("aws_iam_role", "inline_policy", "set", ["optional_computed"])
type_attr("aws_iam_role", "unique_id", "string", ["computed"])
type_mint("aws_iam_role", "unique_id", "AROA{hash}")
type_attr("aws_iam_role", "create_date", "string", ["computed"])
type_mint("aws_iam_role", "create_date", "2026-01-01T00:00:00Z")

# aws_iam_policy
type_provider("aws_iam_policy", "aws")
type_attr("aws_iam_policy", "id", "string", ["computed", "id"])
type_mint("aws_iam_policy", "id", "arn:aws:iam::123456789012:policy/{doc:name}")
type_attr("aws_iam_policy", "arn", "string", ["computed"])
type_mint("aws_iam_policy", "arn", "arn:aws:iam:us-east-1:123456789012:iam_policy/{name}")
type_attr("aws_iam_policy", "tags", "map", [])
type_attr("aws_iam_policy", "tags_all", "map", ["computed"])
type_attr("aws_iam_policy", "name", "string", ["optional_computed"])
type_mint("aws_iam_policy", "name", "terraform-{hash}")
type_attr("aws_iam_policy", "name_prefix", "string", ["optional_computed", "name_like"])
type_attr("aws_iam_policy", "policy", "string", ["required"])
type_attr("aws_iam_policy", "path", "string", [])
type_attr("aws_iam_policy", "description", "string", [])
type_attr("aws_iam_policy", "policy_id", "string", ["computed"])
type_mint("aws_iam_policy", "policy_id", "ANPA{hash}")
type_attr("aws_iam_policy", "attachment_count", "int", ["computed"])
type_mint("aws_iam_policy", "attachment_count", 0)

# aws_s3_bucket
type_provider("aws_s3_bucket", "aws")
# A bucket name is global: the old bucket must be gone before it is reused.
type_replace("aws_s3_bucket", "destroy_first")
type_attr("aws_s3_bucket", "id", "string", ["computed", "id"])
type_mint("aws_s3_bucket", "id", "{doc:bucket}")
type_attr("aws_s3_bucket", "arn", "string", ["computed"])
type_mint("aws_s3_bucket", "arn", "arn:aws:s3:us-east-1:123456789012:s3_bucket/{name}")
type_attr("aws_s3_bucket", "tags", "map", [])
type_attr("aws_s3_bucket", "tags_all", "map", ["computed"])
type_attr("aws_s3_bucket", "bucket", "string", ["optional_computed", "force_new"])
type_mint("aws_s3_bucket", "bucket", "terraform-{hash}")
type_attr("aws_s3_bucket", "bucket_prefix", "string", ["optional_computed"])
type_attr("aws_s3_bucket", "force_destroy", "bool", [])
type_attr("aws_s3_bucket", "object_lock_enabled", "bool", ["optional_computed"])
type_mint("aws_s3_bucket", "object_lock_enabled", false)
type_attr("aws_s3_bucket", "bucket_domain_name", "string", ["computed"])
type_mint("aws_s3_bucket", "bucket_domain_name", "{doc:bucket}.s3.amazonaws.com")
type_attr("aws_s3_bucket", "bucket_regional_domain_name", "string", ["computed"])
type_mint("aws_s3_bucket", "bucket_regional_domain_name", "{doc:bucket}.s3.us-east-1.amazonaws.com")
type_attr("aws_s3_bucket", "hosted_zone_id", "string", ["computed"])
type_mint("aws_s3_bucket", "hosted_zone_id", "Z3AQBSTGFYJSTF")
type_attr("aws_s3_bucket", "region", "string", ["computed"])
type_mint("aws_s3_bucket", "region", "us-east-1")

# aws_db_instance
type_provider("aws_db_instance", "aws")
type_attr("aws_db_instance", "id", "string", ["computed", "id"])
type_mint("aws_db_instance", "id", "db-{hash}")
type_attr("aws_db_instance", "arn", "string", ["computed"])
type_mint("aws_db_instance", "arn", "arn:aws:rds:us-east-1:123456789012:db_instance/{name}")
type_attr("aws_db_instance", "tags", "map", [])
type_attr("aws_db_instance", "tags_all", "map", ["computed"])
type_attr("aws_db_instance", "identifier", "string", ["optional_computed"])
type_mint("aws_db_instance", "identifier", "terraform-{hash}")
type_attr("aws_db_instance", "identifier_prefix", "string", ["optional_computed"])
type_attr("aws_db_instance", "engine", "string", ["optional_computed"])
type_mint("aws_db_instance", "engine", "postgres")
type_attr("aws_db_instance", "engine_version", "string", ["optional_computed"])
type_mint("aws_db_instance", "engine_version", "16.3")
type_attr("aws_db_instance", "instance_class", "string", ["required"])
type_attr("aws_db_instance", "allocated_storage", "int", ["optional_computed"])
type_mint("aws_db_instance", "allocated_storage", 20)
type_attr("aws_db_instance", "username", "string", ["optional_computed"])
type_mint("aws_db_instance", "username", "postgres")
type_attr("aws_db_instance", "password", "string", ["sensitive"])
type_attr("aws_db_instance", "manage_master_user_password", "bool", [])
type_attr("aws_db_instance", "db_subnet_group_name", "string", ["optional_computed"])
type_mint("aws_db_instance", "db_subnet_group_name", "default")
type_attr("aws_db_instance", "vpc_security_group_ids", "set(ref(aws_security_group))", ["optional_computed"])
type_attr("aws_db_instance", "availability_zone", "string", ["optional_computed"])
type_mint("aws_db_instance", "availability_zone", "us-east-1b")
type_attr("aws_db_instance", "multi_az", "bool", ["optional_computed"])
type_mint("aws_db_instance", "multi_az", false)
type_attr("aws_db_instance", "publicly_accessible", "bool", [])
type_attr("aws_db_instance", "storage_type", "string", ["optional_computed"])
type_mint("aws_db_instance", "storage_type", "gp2")
type_attr("aws_db_instance", "port", "int", ["optional_computed"])
type_mint("aws_db_instance", "port", 5432)
type_attr("aws_db_instance", "backup_retention_period", "int", ["optional_computed"])
type_mint("aws_db_instance", "backup_retention_period", 0)
type_attr("aws_db_instance", "skip_final_snapshot", "bool", [])
type_attr("aws_db_instance", "address", "string", ["computed"])
type_mint("aws_db_instance", "address", "{doc:identifier}.c123abc.us-east-1.rds.amazonaws.com")
type_attr("aws_db_instance", "endpoint", "string", ["computed"])
type_mint("aws_db_instance", "endpoint", "{doc:identifier}.c123abc.us-east-1.rds.amazonaws.com:5432")
type_attr("aws_db_instance", "hosted_zone_id", "string", ["computed"])
type_mint("aws_db_instance", "hosted_zone_id", "Z2R2ITUGPM61AM")
type_attr("aws_db_instance", "resource_id", "string", ["computed"])
type_mint("aws_db_instance", "resource_id", "db-{hash}")
type_attr("aws_db_instance", "status", "string", ["computed"])
type_mint("aws_db_instance", "status", "available")
type_attr("aws_db_instance", "master_user_secret", "list", ["computed"])

# aws_lb
type_provider("aws_lb", "aws")
type_attr("aws_lb", "id", "string", ["computed", "id"])
type_mint("aws_lb", "id", "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/{name}/{hash}")
type_attr("aws_lb", "tags", "map", [])
type_attr("aws_lb", "tags_all", "map", ["computed"])
type_attr("aws_lb", "arn", "string", ["computed"])
type_mint("aws_lb", "arn", "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/{name}/{hash}")
type_attr("aws_lb", "name", "string", ["optional_computed"])
type_mint("aws_lb", "name", "tf-lb-{hash}")
type_attr("aws_lb", "name_prefix", "string", ["optional_computed", "name_like"])
type_attr("aws_lb", "internal", "bool", ["optional_computed"])
type_mint("aws_lb", "internal", false)
type_attr("aws_lb", "load_balancer_type", "string", [])
type_attr("aws_lb", "security_groups", "set", ["optional_computed"])
type_attr("aws_lb", "subnets", "set", ["optional_computed"])
type_attr("aws_lb", "ip_address_type", "string", ["optional_computed"])
type_mint("aws_lb", "ip_address_type", "ipv4")
type_attr("aws_lb", "enable_deletion_protection", "bool", [])
type_attr("aws_lb", "idle_timeout", "int", [])
type_attr("aws_lb", "arn_suffix", "string", ["computed"])
type_mint("aws_lb", "arn_suffix", "app/{name}/{hash}")
type_attr("aws_lb", "dns_name", "string", ["computed"])
type_mint("aws_lb", "dns_name", "{name}-{n}.us-east-1.elb.amazonaws.com")
type_attr("aws_lb", "zone_id", "string", ["computed"])
type_mint("aws_lb", "zone_id", "Z35SXDOTRQ7X7K")
type_attr("aws_lb", "vpc_id", "string", ["computed"])
type_mint("aws_lb", "vpc_id", "vpc-{hash}")
